# nfatlas

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yaml
_bmad/: config.toml  (+1 more)
backend/: Dockerfile.backend  Dockerfile.worker  pyproject.toml
backend/migrations/: alembic.ini  env.py
backend/migrations/versions/: 20260714_0900_0001_users_audit_log_idempotency.py  20260715_0900_0002_otps_and_sessions.py  20260716_0900_0003_rbac.py  20260721_0900_0004_ledger.py  20260722_0900_0005_payment_intents.py  20260728_0900_0006_draws_skill_questions.py  20260729_0900_0007_skill_question_attempts.py  20260730_0900_0008_tickets_and_free_slips.py
backend/src/atlas/: __init__.py  config.py  db.py  main.py
backend/src/atlas/admin/: __init__.py  models.py  service.py
backend/src/atlas/audit_log/: __init__.py  models.py  writer.py
backend/src/atlas/draw/: __init__.py  models.py  routes.py  schemas.py  service.py
backend/src/atlas/idempotency/: __init__.py  dependency.py  middleware.py  models.py
backend/src/atlas/identity/: __init__.py  auth.py  mailhog_sender.py  models.py  otp_service.py  password_service.py  routes.py  schemas.py  service.py  session_service.py
backend/tests/: conftest.py  test_healthz.py
backend/tests/admin/: test_rbac.py
backend/tests/draw/: test_draw_routes.py
backend/tests/identity/: test_otp_and_session.py  test_register.py
backend/tests/payment/: test_e2e_deposit.py  test_intent_endpoint.py  test_paystack_adapter.py  test_reconcile.py  test_webhook.py
backend/tests/skill/: test_skill_routes.py  test_skill_service.py
backend/tests/ticket/: test_free_entry.py  test_purchase_flow.py
backend/tests/unit/: test_audit_log_writer.py  test_identity_crypto.py  test_ledger_math.py
backend/tests/wallet/: test_ledger_trigger.py  test_wallet_routes.py  test_wallet_service.py
(+138 files in other folders)
